Fix spacing and font color

--- a/HTML-CSS/FinalAssignment/styles/sass/partials/_registration.scss
+++ b/HTML-CSS/FinalAssignment/styles/sass/partials/_registration.scss
@@ -89,7 +89,7 @@
     }
     @media screen and (min-width: $lg) {
       max-width: 50%;
-      margin-top: 40px;
+      margin-top: 0;
     }
 
     p {
@@ -132,6 +132,7 @@
       }
     }
     &--bottom {
+      color: $faded-black;
       display: flex;
       justify-content: center;
       gap: 20px;
