--- a/HTML-CSS/FinalAssignment/styles/style.css
+++ b/HTML-CSS/FinalAssignment/styles/style.css
@@ -1169,7 +1169,7 @@ h1 {
 @media screen and (min-width: 1025px) {
   .registration__form {
     max-width: 50%;
-    margin-top: 40px;
+    margin-top: 0;
   }
 }
 .registration__form p {
@@ -1218,6 +1218,7 @@ h1 {
   min-width: 10px;
 }
 .registration__form--bottom {
+  color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   gap: 20px;
